# chatterstorm

./: .gitignore  Cargo.toml  Makefile  README.md  download-card-data.py
chatterstorm_client/: Cargo.toml
chatterstorm_core/: Cargo.toml
chatterstorm_core/src/: lib.rs
chatterstorm_core/src/objects/: card_face.rs  card_type.rs
chatterstorm_core/src/tokens/: mod.rs  object_type.rs  subtype.rs  supertype.rs
chatterstorm_engine/: Cargo.toml
chatterstorm_engine/src/objects/: card.rs  mod.rs
chatterstorm_engine/src/tokens/: enum_set.rs  object_type.rs  subtype.rs  supertype.rs
chatterstorm_game_server/: Cargo.toml
chatterstorm_parser/: .gitignore  Cargo.toml
chatterstorm_parser/src/: ast.rs  card.lalrpop  lib.rs  main.rs  tokens.rs
chatterstorm_parser/src/ast/: mod.rs  object_face_type.rs
chatterstorm_parser/src/parser/: card_parser.rs  mod.rs  parsed_card.rs
chatterstorm_parser/src/parser/test_data/: forest.json  horn_of_the_mark.json  prepare__fight.json
chatterstorm_parser/src/tokens/: mod.rs  object_type.rs  subtype.rs  supertype.rs
docs/design/: Overview.md
