[package]
name = "chatterstorm_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
logos = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
