[package]
name = "chatterstorm_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
derive_more = "0.99.18"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
scryfall = "0.16.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
test-case = "3.3.1"
